fixed overflow of margins

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -9,7 +9,7 @@
     align-items: center;
     width: 100%;
     min-height: 40vh;
-    margin: 10px 10px;
+    margin: 10px 0px;
 }
 
 .form{
